--- a/19182.4/interfaces/index.html
+++ b/19182.4/interfaces/index.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-    <title>Color Pattern Generator | LCARS SDK v4.0</title>
+    <title>Blank Template | LCARS SDK v4.0</title>
 
     <!-- Core JS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
