--- a/19182.4/interfaces/color-generator/index.html
+++ b/19182.4/interfaces/color-generator/index.html
@@ -14,13 +14,14 @@
     <title>Color Pattern Generator | LCARS SDK v4.0</title>
 
     <!-- Core JS -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/2.0.0/jquery.mobile-events.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js"></script>
+	
+    <script type="text/javascript" src="../../lcars-sdk/core/jquery.js"></script>
+    <script type="text/javascript" src="../../lcars-sdk/core/jquery.mobile-events.js"></script>
+    <script type="text/javascript" src="../../lcars-sdk/core/arrive.js"></script>
 
+    <!-- LCARS-SDK Elements and Widgets JS-->
+    
     <script type="text/javascript" src="../../lcars-sdk/core/lcars-sdk.js"></script>
-
-    <!-- Elements and Widgets JS-->    
     <script type="text/javascript" src="../../lcars-sdk/elements/aside.js"></script>
     <script type="text/javascript" src="../../lcars-sdk/elements/bar.js"></script>
     <script type="text/javascript" src="../../lcars-sdk/elements/block.js"></script>
@@ -50,23 +51,20 @@
     <script type="text/javascript" src="../../lcars-sdk/widgets/sdk_default-bar-frame/default-bar-frame.js"></script>
     <script type="text/javascript" src="../../lcars-sdk/widgets/sdk_scroll-button/scroll-button.js"></script>
 
-    <!-- Project Specific JS-->        
-    <script type="text/javascript" src="module.js"></script>	   
-
-    <!-- Core and Widgets CSS-->    
+    <!-- LCARS-SDK Elements, Widgets, Web Font, and Color Theme CSS-->    
+	
     <link rel="stylesheet" type="text/css" href="../../lcars-sdk/core/lcars-sdk.css">
     <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_solid-level-bar/solid-level-bar.css">
     <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_default-bracket/default-bracket.css">
     <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_default-bar-frame/default-bar-frame.css">
     <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_scroll-button/scroll-button.css">
+    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/themes/sdk_theme-default.css">
+	<link rel="stylesheet" type="text/css" href="../../lcars-sdk/fonts/sdk_fonts-default.css">
 
-    <!-- Color Theme CSS-->    
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/themes/sdk_theme-default.css"> 
+    <!-- Project Specific JS, Theme & CSS-->    
 
-    <!-- Project Specific CSS-->    
+    <script type="text/javascript" src="module.js"></script>	   
     <link rel="stylesheet" type="text/css" href="module.css">
-
-    <!-- Project Specific Theme CSS-->    
     <link rel="stylesheet" type="text/css" href="theme.css">
 	
 </head>
