--- a/19182.4/interfaces/color-generator/color-generator.html
+++ b/19182.4/interfaces/color-generator/color-generator.html
@@ -11,7 +11,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
-    <title>Blank Template | LCARS SDK v4.0</title>
+    <title>Color Pattern Generator | LCARS SDK v4.0</title>
 
     <!-- Core JS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -19,8 +19,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js"></script>
 
     <!-- LCARS-SDK Elements, Widgets, Web Font, and Color Theme -->
-    <script type="text/javascript" src="../lcars-sdk-19182.4.js"></script>
-    <link rel="stylesheet" type="text/css" href="../lcars-sdk-19182.4.css">
+    <script type="text/javascript" src="../../lcars-sdk-19182.4.js"></script> <!-- -->
+    <link rel="stylesheet" type="text/css" href="../../lcars-sdk-19182.4.css"> <!-- -->
 
     <!-- Interface Specific JS, Theme & CSS-->    
     <script type="text/javascript" src="module.js"></script>	   
