--- a/19182.4/interfaces/hardcode/hardcode.html
+++ b/19182.4/interfaces/hardcode/hardcode.html
@@ -16,14 +16,7 @@
     <!--<base href="/">-->
        
     <!-- Core, Fonts, Widgets, and  Color Theme CSS-->
-	
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/core/lcars-sdk.css">
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_solid-level-bar/solid-level-bar.css">
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_default-bracket/default-bracket.css">
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_default-bar-frame/default-bar-frame.css">
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/widgets/sdk_scroll-button/scroll-button.css">
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk/themes/sdk_theme-default.css">
-	<link rel="stylesheet" type="text/css" href="../../lcars-sdk/fonts/sdk_fonts-default.css">
+    <link rel="stylesheet" type="text/css" href="../../lcars-sdk-19182.4.css">
 
     <!-- Project Specific CSS-->    
     <link rel="stylesheet" type="text/css" href="module.css">
