--- a/19182.4/interfaces/index.html
+++ b/19182.4/interfaces/index.html
@@ -19,8 +19,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/arrive/2.4.1/arrive.min.js"></script>
 
     <!-- LCARS-SDK Elements, Widgets, Web Font, and Color Theme -->
-    <script type="text/javascript" src="../lcars-sdk-19182.4.js"></script>
-    <link rel="stylesheet" type="text/css" href="../lcars-sdk-19182.4.css">
+    <script type="text/javascript" src="https://sfranzyshen.github.io/LCARS-SDK-ARCHIVE/19182.4/lcars-sdk-19182.4.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://sfranzyshen.github.io/LCARS-SDK-ARCHIVE/19182.4/lcars-sdk-19182.4.css">
 
     <!-- Interface Specific JS, Theme & CSS-->    
     <script type="text/javascript" src="module.js"></script>	   
