--- a/19182.4/interfaces/hardcode/hardcode.html
+++ b/19182.4/interfaces/hardcode/hardcode.html
@@ -16,8 +16,8 @@
     <!--<base href="/">-->
        
     <!-- Core, Fonts, Widgets, and  Color Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../../lcars-sdk-19182.4.css">
-
+    <link rel="stylesheet" type="text/css" href="https://sfranzyshen.github.io/LCARS-SDK-ARCHIVE/19182.4/lcars-sdk-19182.4.css">
+    
     <!-- Project Specific CSS-->    
     <link rel="stylesheet" type="text/css" href="module.css">
 
